# ultrasound-segmentation

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yaml
src/usseg/: general_functions.py  main.py  organise_files.py  segment_files.py  single_image_processing.py  visualisation_html.py
tests/: single_image_processing_test.py
