[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[project]
name = "usseg"
dynamic = ["version"]
description = "Tools to segment doppler ultrasound signals from scan images."
authors = [{name="Dale Kernot", email="874043@swansea.ac.uk"}]
license = "GPL-3.0-or-later"
readme = "README.md"
dependencies = [
    "rapidfuzz",
    "matplotlib",
    "numpy",
    "opencv-contrib-python",
    "pandas",
    "pydicom",
    "pytesseract",
    "scipy",
    "scikit-image>=0.26.0",
    "scikit-learn",
    "toml",
]
requires-python = ">3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "dirty-tag"

[project.optional-dependencies]
docs = ["renku-sphinx-theme"]
#[tool.poetry.dependencies]
#python = ">=3.10,<3.12"
#matplotlib = "^3.7.1"
#scipy = "^1.10.1"
#scikit-image = "^0.20.0"
#numpy = "^1.24.3"
#nibabel = "^5.1.0"
#pandas = "^2.0.1"
#pytesseract = "^0.3.10"
#openpyxl = "^3.1.2"
#plotly = "^5.14.1"
#toml = "^0.10.2"
#scikit-learn = "^1.2.2"
#opencv-contrib-python = "^4.7.0.72"
#super-image = "^0.1.7"
